--- a/index.html
+++ b/index.html
@@ -1,19 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Start - Responsive One Page Template</title>
-    <link href="assets/css/template.css" rel="stylesheet">
+<!doctype html>
+<html lang="en-US">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+<meta charset="utf-8">
+<title></title>
+<link rel="canonical" href="" />
+
+<meta name="description" content="" />
+<meta name="keywords" content="" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="" />
+<meta property="og:description" content="" />
+<meta property="og:url" content="" />
+<meta property="og:image" content="open-graph-logo.png" />
+<meta property="og:site_name" content="New Baltimore Properties" />
+
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:description" content="" />
+<meta name="twitter:title" content="" />
+<meta name="twitter:image" content="twitter-card-logo-1024x512.png" />
+
+<link rel="mask-icon" href="pinned-tab-icon.svg" color="#e31d39">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+<link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="shortcut icon" href="favicon.ico">
+<meta name="msapplication-TileColor" content="#e31d39">
+<meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+<link rel="stylesheet" type="text/css" href="css/template.css" />
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+<script type="text/javascript" src="" ></script>
+
   </head>
 
   <body>
+    <a class="page-skip-links" href="#page-main">Skip to main content</a>
     <div id="page">
       <header id="header" class="site-header">
         <nav id="topbar" class="site-topbar visible-lg visible-md">
@@ -21,10 +61,10 @@
             <div class="row">
               <div class="col-sm-6">Questions? Call us toll free: +1 234 4567 890</div>
               <div class="social-links col-sm-6">
-                <a href="#"><i class="fa fa-facebook"></i></a>
+                <!--<a href="#"><i class="fa fa-facebook"></i></a>
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-google-plus"></i></a>
-                <a href="#"><i class="fa fa-pinterest"></i></a>
+                <a href="#"><i class="fa fa-pinterest"></i></a>-->
               </div>
             </div>
           </div>
@@ -43,10 +83,10 @@
               <ul id="navigation" class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#header" class="current">Home</a></li>
                 <li><a href="#features">Features</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <!--<li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#blog">Blog</a></li>
-                <li><a href="#clients">Clients</a></li>
+                <li><a href="#clients">Clients</a></li>-->
                 <li><a href="#contact">Contact</a></li>
               </ul>
             </div>
@@ -54,6 +94,7 @@
         </nav>
       </header>
 
+      <a name="page-main"></a>
       <main id="main" class="site-main">
 
         <section id="carousel-1" class="carousel slide section-slide" data-ride="carousel">
@@ -128,7 +169,7 @@
           </div>
         </section>
 
-        <section id="portfolio" class="section section-portfolio">
+        <!--<section id="portfolio" class="section section-portfolio">
           <div class="container">
             <h2 class="section-title"><span>Recent Works.</span></h2>
             <ul id="filters">
@@ -213,10 +254,10 @@
             </div>
 
           </div>
-        </section>
+        </section>-->
 
         <!-- Project Modal -->
-        <div class="modal fade" id="project-modal" tabindex="-1" role="dialog" aria-labelledby="project-modal-label" aria-hidden="true">
+        <!--<div class="modal fade" id="project-modal" tabindex="-1" role="dialog" aria-labelledby="project-modal-label" aria-hidden="true">
           <div class="modal-dialog">
 
             <div class="modal-content">
@@ -504,7 +545,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section>-->
 
         <section id="contact" class="section section-center section-contact">
           <div class="container">
@@ -570,10 +611,10 @@
                 <h5 class="widget-title">Contact</h5>
                 <div class="textwidget">
                   <div class="adr">
-                    <div class="street-address">416 Water St.</div>
-                    <span class="locality">New York</span>,
-                    <abbr class="region" title="New York">NY</abbr>,
-                    <span class="postal-code">10002</span>,
+                    <div class="street-address">5010 Ladd Avenue</div>
+                    <span class="locality">Los Angeles</span>,
+                    <abbr class="region" title="California">CA</abbr>,
+                    <span class="postal-code">90032</span>,
                     <span class="country-name">U.S.A</span>
                   </div>
                   <div>Phone: <span class="tel">+1.123.456.7890</span></div>
@@ -581,10 +622,10 @@
                 </div>
               </aside>
 
-              <aside class="widget col-md-3 col-sm-6">
+              <!--<aside class="widget col-md-3 col-sm-6">
                 <h5 class="widget-title">Need Help?</h5>
                 <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptate rerum voluptates. <a href="#">Read more</a></p>
-              </aside>
+              </aside>-->
 
               <aside class="widget col-md-3 col-sm-6">
                 <h5 class="widget-title">Get in touch</h5>
@@ -594,12 +635,12 @@
                     <button class="btn btn-danger" type="button"><i class="fa fa-arrow-right"></i></button>
                   </span>
                 </div>
-                <ul class="social-links">
+                <!--<ul class="social-links">
                   <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                   <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                   <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                </ul>
+                </ul>-->
               </aside>
 
             </div>
@@ -608,24 +649,24 @@
           <div id="sidebar-footer-2">
             <div class="row">
 
-              <aside class="widget col-sm-6">
+              <!--<aside class="widget col-sm-6">
                 <h5 class="widget-title">Latest Tweet</h5>
                 <div class="tweet">
                   It is better to be hated for what you are than to be loved for something you are not.<br />– Andre Gide –
                 </div>
-              </aside>
+              </aside>-->
 
-              <aside class="widget widget_flickr col-sm-6">
+              <!--<aside class="widget widget_flickr col-sm-6">
                 <h5 class="widget-title">Latest Photos</h5>
                 <a href="#" class="hover-effect"><img src="http://placehold.it/100x100" /><span class="overlay"><i class="fa fa-plus"></i></span></a>
                 <a href="#" class="hover-effect"><img src="http://placehold.it/100x100" /><span class="overlay"><i class="fa fa-plus"></i></span></a>
                 <a href="#" class="hover-effect"><img src="http://placehold.it/100x100" /><span class="overlay"><i class="fa fa-plus"></i></span></a>
-              </aside>
+              </aside>-->
 
             </div>
           </div>
 
-          <div class="copyright"><p>© 2014 Company, Inc.<br /> Theme: Start 1.2.3. Designed by <a href="http://www.yoarts.com">YoArts</a></p></div>
+          <div class="copyright"><p>&copy 2018 New Baltimore Properties, LLC. All rights reserved.</p></div>
         </div>
       </footer>
     </div>
