--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
             </div>
           </div>
 
-          <div class="copyright"><p>&copy 2018 New Baltimore Properties, LLC. All rights reserved.</p></div>
+          <div class="copyright"><p>&copy; 2018 New Baltimore Properties, LLC. All rights reserved.</p></div>
         </div>
       </footer>
     </div>
