Updating content and styles

--- a/index.html
+++ b/index.html
@@ -1,63 +1,34 @@
-<!DOCTYPE html>
-
-<!-- BEGIN HTML -->
-
+<!doctype html>
 <html dir="ltr" lang="en-US">
-
 <head>
-
-<!-- Designed & Developed by Ben Bate (http://benbate.com) -->
-
-<meta charset="utf-8">
-
-<!-- PAGE TITLES -->
-
-<title>Breeze</title>
-
-<!-- META -->
-
-<meta name="description" content="your description" />
-
-<meta name="keywords" content="your keywords" />
-
-<!-- MAIN CSS -->
-
-<link href="style.css" rel="stylesheet" type="text/css" />
-
-<!-- FONTS -->
-
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:600,700' rel='stylesheet' type='text/css'>
-
-<link href='http://fonts.googleapis.com/css?family=Merriweather:300' rel='stylesheet' type='text/css'>
-
-<!-- SHORTCUT ICONS -->
-
-<link REL="SHORTCUT ICON" HREF="images/favicon.ico">
-
-<link rel="apple-touch-icon-precomposed" href="images/iphoneicon.png">
-
-<!-- RESPONSIVE (MOBILE) -->
-
-<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Bungaleau  |  New Baltimore</title>
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<link rel="stylesheet" href="style.css" type="text/css" />
+	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:600,700' type='text/css' />
+	
+	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Merriweather:300' type='text/css' />
+	<link rel="shortcut icon" href="img/favicon.ico" />
+	<link rel="apple-touch-icon-precomposed" href="img/iphoneicon.png" />
 
 </head>
-
 <body>
-
 <section id="container">
 
 	<header>
 
 		<div id="leftlinks">
-			<p><a href="http://dribbble.com/benbate">Dribbble</a></p>
-			<p><a href="http://twitter.com/ben_bate">Twitter</a></p>
+			<p><a href="#">Zillow</a></p>
+			<p><a href="#">RadPad</a></p>
 		</div>
 
-		<a id="logo" href="#"></a>
+		<h1><a id="logo" href="#"></a></h1>
 
 		<div id="rightlinks">
-			<p><a href="mailto:contact@benbate.com">Email</a></p>
-			<p><a href="http://creativemarket.com/benbate">Themes</a></p>
+			<p><a href="#">Craigslist</a></p>
+			<p><a href="#">Apartments.com</a></p>
 		</div>
 
 	</header>
@@ -66,8 +37,7 @@
 
 		<section id="intro">
 
-			<p>Hi. I'm Ben, an independent interface designer from the UK.</p>
-			<p>You'll either find me pushing pixels, shooting hoops, eating pizza or asleep (rarity).</p>
+			<p>Welcome to <em>Bungaleau</em> a modern three bedroom, two bathroom house located in the quiet neighborhood of El&nbsp;Sereno on the east side of Los&nbsp;Angeles.</p>
 		
 			<div id="divider"></div>
 
@@ -76,64 +46,55 @@
 		<section id="work">
 
 			<div class="portfolioitem">
-				<a href="http://drbl.in/fCfV">
-					<img src="images/1.jpeg">
+					<img src="img/1.jpeg" alt="" />
 					<div class="overlay">
-						<span>Login Modal ∞</span>
+						<span>&#9664;&nbsp; Login Modal &nbsp;&#9658;</span>
 					</div><!-- END OVERLAY -->
-				</a>
 			</div><!-- END PORTFOLIO ITEM -->
 
 			<div class="portfolioitem">
-				<a href="http://drbl.in/fTCb">
-					<img src="images/2.jpeg">
+					<img src="img/2.jpeg" alt="" />
 					<div class="overlay">
-						<span>Create New Album Application Interface ∞</span>
+						<span>&#9664;&nbsp; Create New Album Application Interface &nbsp;&#9658;</span>
 					</div><!-- END OVERLAY -->
-				</a>
 			</div><!-- END PORTFOLIO ITEM -->
 
 			<div class="portfolioitem">
-				<a href="http://drbl.in/gtum">
-					<img src="images/3.jpeg">
+					<img src="img/3.jpeg" alt="" />
 					<div class="overlay">
-						<span>Musicapp Concept ∞</span>
+						<span>&#9664;&nbsp; Musicapp Concept &nbsp;&#9658;</span>
 					</div><!-- END OVERLAY -->
-				</a>
 			</div><!-- END PORTFOLIO ITEM -->
 
 			<div class="portfolioitem">
-				<a href="http://drbl.in/fycD">
-					<img src="images/4.png">
+					<img src="img/4.png" alt="" />
 					<div class="overlay">
-						<span>Login Modal ∞</span>
+						<span>&#9664;&nbsp; Login Modal &nbsp;&#9658;</span>
 					</div><!-- END OVERLAY -->
-				</a>
 			</div><!-- END PORTFOLIO ITEM -->
 
 			<div class="portfolioitem">
-				<a href="http://drbl.in/fDNy">
-					<img src="images/5.jpeg">
+					<img src="img/5.jpeg" alt="" />
 					<div class="overlay">
-						<span>16px Icon Set ∞</span>
+						<span>&#9664;&nbsp; 16px Icon Set &nbsp;&#9658;</span>
 					</div><!-- END OVERLAY -->
-				</a>
 			</div><!-- END PORTFOLIO ITEM -->
 		
 		</section><!-- END WORK -->
 
-		<section id="hireme">
+		<section id="learn-more">
 
-		<a href="mailto:contact@benbate.com">HIRE ME</a>
+			<a href="mailto:hello@newbaltimoreproperties.com">Learn More</a>
 
 		</section><!-- END HIREME -->
 
 	</section><!-- END MAIN -->
 
 	<footer>
-		<p><a href="http://creativemarket.com/benbate">Crafted with ❤ by Ben.</a></p>
+		<p>&copy; 2018 New Baltimore, LLC. All rights reserved.</p>
 	</footer>
 
 </section><!-- END CONTAINER -->
 
 </body>
+</html>
