--- a/index.html
+++ b/index.html
@@ -45,38 +45,24 @@
 
 		<section id="work">
 
-			<div class="portfolioitem">
-					<img src="img/1.jpeg" alt="" />
+			<div class="portfolio-item">
+					<img src="img/IS-5bs9lqy9geal.jpg" alt="" />
 					<div class="overlay">
-						<span>&#9664;&nbsp; Login Modal &nbsp;&#9658;</span>
+						<span>&#9664;&nbsp; Front of House &nbsp;&#9658;</span>
 					</div><!-- END OVERLAY -->
 			</div><!-- END PORTFOLIO ITEM -->
 
-			<div class="portfolioitem">
-					<img src="img/2.jpeg" alt="" />
+			<div class="portfolio-item">
+					<img src="img/IS-5bss3fzniue5.jpg" alt="" />
 					<div class="overlay">
-						<span>&#9664;&nbsp; Create New Album Application Interface &nbsp;&#9658;</span>
+						<span>&#9664;&nbsp; Second Bedroom &nbsp;&#9658;</span>
 					</div><!-- END OVERLAY -->
 			</div><!-- END PORTFOLIO ITEM -->
 
-			<div class="portfolioitem">
-					<img src="img/3.jpeg" alt="" />
+			<div class="portfolio-item">
+					<img src="img/IS-5bsn8tr6o125.jpg" alt="" />
 					<div class="overlay">
-						<span>&#9664;&nbsp; Musicapp Concept &nbsp;&#9658;</span>
-					</div><!-- END OVERLAY -->
-			</div><!-- END PORTFOLIO ITEM -->
-
-			<div class="portfolioitem">
-					<img src="img/4.png" alt="" />
-					<div class="overlay">
-						<span>&#9664;&nbsp; Login Modal &nbsp;&#9658;</span>
-					</div><!-- END OVERLAY -->
-			</div><!-- END PORTFOLIO ITEM -->
-
-			<div class="portfolioitem">
-					<img src="img/5.jpeg" alt="" />
-					<div class="overlay">
-						<span>&#9664;&nbsp; 16px Icon Set &nbsp;&#9658;</span>
+						<span>&#9664;&nbsp; Third Bedroom &nbsp;&#9658;</span>
 					</div><!-- END OVERLAY -->
 			</div><!-- END PORTFOLIO ITEM -->
 		
