--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 	<header>
 
 		<div id="leftlinks">
-			<p><a href="#">Zillow</a></p>
-			<p><a href="#">RadPad</a></p>
+			<p><a href="https://www.zillow.com/homedetails/5010-Ladd-Ave-Los-Angeles-CA-90032/20641268_zpid/">Zillow</a></p>
+			<p><a href="https://www.onradpad.com/22296300-house-5010-ladd-ave-los-angeles-ca">RadPad</a></p>
 		</div>
 
 		<h1><a id="logo" href="#"></a></h1>
 
 		<div id="rightlinks">
 			<p><a href="#">Craigslist</a></p>
-			<p><a href="#">Apartments.com</a></p>
+			<p><a href="https://www.apartments.com/5010-ladd-ave-los-angeles-ca/jn82gs4/">Apartments.com</a></p>
 		</div>
 
 	</header>
@@ -36,6 +36,8 @@
 	<section id="main">
 
 		<section id="intro">
+			
+			<p class="alert">This property is currently off the market.</p>
 
 			<p>Welcome to <em>Bungaleau</em> a modern three bedroom, two bathroom house located in the quiet neighborhood of El&nbsp;Sereno on the east side of Los&nbsp;Angeles.</p>
 		
